# email

./: CMakeLists.txt  find.cpp  group.cmake
include/mail/: Address.h  Attachment.h  Credentials.h  Message.h  SmtpClient.h
sources/: CMakeLists.txt
sources/exe/: CMakeLists.txt  main.cpp
sources/lib/: Attachment.cpp  CMakeLists.txt  SmtpClient.cpp
sources/lib/detail/: Attachment.cpp  Attachment.h  SmtpClient.cpp  SmtpClient.h
